<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="activity"
            type="com.rakuten.tech.mobile.testapp.ui.userdata.QASettingsActivity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_section"
                android:paddingStart="@dimen/medium_16"
                android:paddingTop="@dimen/small_4"
                android:paddingEnd="@dimen/medium_16"
                android:paddingBottom="@dimen/small_4"
                android:text="@string/lb_access_token" />

            <com.rakuten.tech.mobile.testapp.analytics.rat_wrapper.RATSwitch
                android:id="@+id/switchAuthFailure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/medium_16"
                android:text="@string/lb_auth_failure_error"
                android:textColor="@android:color/black"
                android:textOff="@string/lb_auth_failure_error"
                android:textOn="@string/lb_auth_failure_error"
                android:textSize="@dimen/text_large_16"
                app:actionType="change_status"
                app:pageName="QA"
                app:siteSection="Settings" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/horizontal_divider_height"
                android:background="@color/bg_section" />

            <com.rakuten.tech.mobile.testapp.analytics.rat_wrapper.RATSwitch
                android:id="@+id/switchOtherError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/medium_16"
                android:text="@string/lb_other_error"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_large_16"
                app:actionType="change_status"
                app:pageName="QA"
                app:siteSection="Settings" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/horizontal_divider_height"
                android:background="@color/bg_section" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_8"
                app:endIconMode="clear_text">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtCustomErrorMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_custom_error_message"
                    android:imeOptions="actionDone"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_section"
                android:paddingStart="@dimen/medium_16"
                android:paddingTop="@dimen/small_4"
                android:paddingEnd="@dimen/medium_16"
                android:paddingBottom="@dimen/small_4"
                android:text="@string/lb_unique_id" />

            <com.rakuten.tech.mobile.testapp.analytics.rat_wrapper.RATSwitch
                android:id="@+id/switchUniqueIdError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/medium_16"
                android:text="@string/lb_unique_id_error"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_large_16"
                app:actionType="change_status"
                app:pageName="QA"
                app:siteSection="Settings" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/horizontal_divider_height"
                android:background="@color/bg_section" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_4"
                app:endIconMode="clear_text">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtUniqueIdError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_4"
                    android:hint="@string/hint_unique_id_error"
                    android:imeOptions="actionDone"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_4"
                app:endIconMode="clear_text">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtMessagingUniqueIdError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_messaging_unique_id_error"
                    android:imeOptions="actionDone"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_4"
                app:endIconMode="clear_text">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtMauidError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_mauid_error"
                    android:imeOptions="actionDone"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_section"
                android:paddingStart="@dimen/medium_16"
                android:paddingTop="@dimen/small_4"
                android:paddingEnd="@dimen/medium_16"
                android:paddingBottom="@dimen/small_4"
                android:text="@string/lb_secure_storage" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_4"
                app:endIconMode="clear_text">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtMaxStorageLimit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_set_max_storage_limit"
                    android:imeOptions="actionDone"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_4"
                app:endIconMode="clear_text">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/clearStorageForMiniAppId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_enter_miniapp_id"
                    android:imeOptions="actionDone"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.rakuten.tech.mobile.testapp.analytics.rat_wrapper.RATButton
                android:id="@+id/btnClearMiniAppSecureStorage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/large_44"
                android:layout_margin="@dimen/medium_16"
                android:background="@drawable/bg_red_curve"
                android:enabled="false"
                android:gravity="center"
                android:padding="@dimen/small_4"
                android:text="@string/action_clear_miniapp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_large_16"
                app:actionType="change_status"
                app:pageName="QA"
                app:siteSection="Settings" />

            <com.rakuten.tech.mobile.testapp.analytics.rat_wrapper.RATButton
                android:id="@+id/btnClearAllSecureStorage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/large_44"
                android:layout_margin="@dimen/medium_16"
                android:background="@drawable/bg_red_curve"
                android:gravity="center"
                android:padding="@dimen/small_4"
                android:text="@string/action_clear_all"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_large_16"
                app:actionType="change_status"
                app:pageName="QA"
                app:siteSection="Settings" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_section"
                android:paddingStart="@dimen/medium_16"
                android:paddingTop="@dimen/small_4"
                android:paddingEnd="@dimen/medium_16"
                android:paddingBottom="@dimen/small_4"
                android:text="@string/lb_detect_bluetooth" />

            <com.rakuten.tech.mobile.testapp.analytics.rat_wrapper.RATButton
                android:id="@+id/btnDetectBTDevice"
                android:layout_width="match_parent"
                android:layout_height="@dimen/large_44"
                android:layout_margin="@dimen/medium_16"
                android:background="@drawable/bg_red_curve"
                android:gravity="center"
                android:padding="@dimen/small_4"
                android:text="@string/action_detect_bluetooth"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_large_16"
                app:actionType="change_status"
                app:pageName="QA"
                app:siteSection="Settings" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_section"
                android:paddingStart="@dimen/medium_16"
                android:paddingTop="@dimen/small_4"
                android:paddingEnd="@dimen/medium_16"
                android:paddingBottom="@dimen/small_4"
                android:text="@string/universal_bridge" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_4"
                app:endIconMode="clear_text">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtUniversalBridgeMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_4"
                    android:hint="@string/hint_universal_bridge_message"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.rakuten.tech.mobile.testapp.analytics.rat_wrapper.RATButton
                android:id="@+id/btnSendToMiniApp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/large_44"
                android:layout_margin="@dimen/medium_16"
                android:background="@drawable/bg_red_curve"
                android:gravity="center"
                android:padding="@dimen/small_4"
                android:text="@string/action_send_to_miniapp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_large_16"
                app:actionType="change_status"
                app:pageName="QA"
                app:siteSection="Settings" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_4"
                app:endIconMode="clear_text">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtPrimaryColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_4"
                    android:hint="@string/hint_set_primary_color"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_4"
                app:endIconMode="clear_text">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtSecondaryColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_4"
                    android:hint="@string/hint_set_secondary_color"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>
</layout>
