<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fragment"
            type="com.rakuten.tech.mobile.testapp.ui.miniapptabs.fragments.FeaturesFragment" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.rakuten.tech.mobile.testapp.analytics.rat_wrapper.CustomButtonViewWithArrow
                    android:id="@+id/btnInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> fragment.switchToInput()}"
                    app:actionType="open"
                    app:icon="@drawable/ic_feature_url_miniapp"
                    app:pageName="feature"
                    app:rightArrowEnable="true"
                    app:siteSection="Top"
                    app:titleDetails="@string/action_go_input_url_details"
                    app:titleLabel="@string/action_go_input_url" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/horizontal_divider_height"
                    android:background="@color/bg_section" />

                <com.rakuten.tech.mobile.testapp.analytics.rat_wrapper.CustomButtonViewWithArrow
                    android:id="@+id/btnLoadFromBundle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> fragment.openMiniAppFromBundle()}"
                    app:actionType="open"
                    app:icon="@drawable/ic_feature_url_miniapp"
                    app:pageName="feature"
                    app:rightArrowEnable="true"
                    app:siteSection="Top"
                    app:titleDetails="@string/action_load_miniapp_from_bundle"
                    app:titleLabel="@string/title_bundle_miniapp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/horizontal_divider_height"
                    android:background="@color/bg_section" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>
</layout>