<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPointStandard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:endIconMode="clear_text">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPointStandard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_points_standard"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="9"
                android:text="@string/hint_points_default_value" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPointTimeLimited"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_8"
            app:layout_constraintStart_toStartOf="@id/layoutPointStandard"
            app:layout_constraintTop_toBottomOf="@+id/layoutPointStandard"
            app:endIconMode="clear_text">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPointTimeLimited"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_points_time_limited"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="9"
                android:text="@string/hint_points_default_value" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_8"
            app:layout_constraintStart_toStartOf="@id/layoutPointTimeLimited"
            app:layout_constraintTop_toBottomOf="@+id/layoutPointTimeLimited"
            app:endIconMode="clear_text">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPointRakutenCash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_points_rakuten_cash"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="9"
                android:text="@string/hint_points_default_value" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
