<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

  <data>
    <variable name="activity" type="com.rakuten.tech.mobile.testapp.ui.userdata.GeneralSettingsActivity" />
  </data>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/small_8"
      android:orientation="vertical"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_section"
        android:paddingStart="@dimen/medium_16"
        android:paddingTop="@dimen/small_4"
        android:paddingEnd="@dimen/medium_16"
        android:paddingBottom="@dimen/small_4"
        android:text="@string/lb_miniapp_url_parameters" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_8"
        app:endIconMode="clear_text"
        app:errorTextAppearance="@style/SettingsError.TextAppearance">

      <androidx.appcompat.widget.AppCompatEditText
          android:id="@+id/editParametersUrl"
          android:layout_width="match_parent"
          android:layout_height="@dimen/large_48"
          android:hint="@string/hint_miniapp_url_parameters"
          android:imeOptions="actionDone"
          android:inputType="text"
          tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/horizontal_divider_height"
        android:background="@color/bg_section" />

    <com.rakuten.tech.mobile.testapp.analytics.rat_wrapper.CustomButtonViewWithArrow
        android:id="@+id/buttonDeeplink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:actionType="open"
        app:iconRes="@drawable/ic_settings_deeplink"
        app:pageName="Settings"
        app:rightArrowEnable="true"
        app:siteSection="Top"
        app:titleLabel="@string/action_dynamic_deeplinks" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/horizontal_divider_height"
        android:background="@color/bg_section" />

  </LinearLayout>
</layout>
